upgrade to java 23, remove JVM flags, make k8 secret env config more flexible